# Breep-distchat

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
include/: audio_source.hpp  chat_window.hpp  display.hpp  flow_controller.hpp  gui_context.hpp  p2pchat.hpp  sound_def.hpp  sound_sender.hpp
include-chat/: audio_source.hpp  connection_fields.hpp  display.hpp  flow_controller.hpp  p2pchat.hpp  sound_def.hpp  sound_sender.hpp
include-chat/display/: connection_gui.hpp  formatted_message.hpp  imgui_helper.hpp  imgui_theming.hpp  main_gui.hpp
include-chat/inl/: p2pchat.inl  sound_sender.inl
include-common/: commands.hpp  peer_recap.hpp  uuid_serialize.hpp
include-server/: peer_info.hpp
include/inl/: p2pchat.inl  sound_sender.inl
src/: audio_source.cpp  chat_window.cpp  display.cpp  gui_context.cpp  imgui_impl_glfw_gl3.cpp  main.cpp  sound_sender.cpp
src-chat/: audio_source.cpp  display.cpp  main.cpp  p2pchat.cpp
src-chat/display/: connection_gui.cpp  formatted_message.cpp  imgui_helper.cpp  imgui_theming.cpp  main_gui.cpp
src-server/: main.cpp  peer_info.cpp
